--- a/policies/restricted/example_allowed-by-anyuid.yaml
+++ b/policies/restricted/example_allowed-by-anyuid.yaml
@@ -1,10 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: restricted-pod-example
+  name: anyuid-compliant-pod
 spec:
-  securityContext:
-    runAsUser: 0
   volumes:
   - name: sec-ctx-vol
     emptyDir: {}
@@ -15,3 +13,6 @@ spec:
     volumeMounts:
     - name: sec-ctx-vol
       mountPath: /data/demo
+    securityContext:
+      capabilities:
+        drop: ["MKNOD"]
