--- a/policies/restricted/example_allowed-by-privileged.yaml
+++ b/policies/restricted/example_allowed-by-privileged.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: restricted-pod-example
+  name: privileged-compliant-pod
 spec:
   securityContext:
-    runAsUser: 1000
-    fsGroup: 1100
+    runAsUser: 0
   volumes:
   - name: sec-ctx-vol
     emptyDir: {}
@@ -13,9 +12,8 @@ spec:
   - name: sec-ctx-demo
     image: busybox
     command: [ "sh", "-c", "sleep 1h" ]
+    securityContext:
+      privileged: true
     volumeMounts:
     - name: sec-ctx-vol
       mountPath: /data/demo
-    securityContext:
-      capabilities:
-        drop: ["KILL","MKNOD","SYS_CHROOT"]
